fix: TD-267 fixed spacing between the title and the first cource

--- a/frontend/src/components/ChooseCourseFinal/ChooseCourseFinal.module.scss
+++ b/frontend/src/components/ChooseCourseFinal/ChooseCourseFinal.module.scss
@@ -9,6 +9,7 @@
 .titleWrapper {
   display: flex;
   justify-content: space-between;
+	margin-bottom: 40px;
 }
 
 .title {
@@ -48,6 +49,7 @@
 
   .titleWrapper {
     margin-left: 20px;
+		margin-bottom: 32px;
   }
 
   .title {
